# msc-thesis

./: .gitignore  README.md  vc_issuance.ipynb  vc_verification.ipynb
project/: .gitignore  pyproject.toml
project/a2a-didauth/: pyproject.toml
project/a2a-didauth/a2a_didauth/adapters/a2a/: __init__.py  agent_card_utils.py  build_json_rpc.py  jsonrpc_builders.py
project/a2a-didauth/a2a_didauth/core/: errors.py  models.py  service.py  session.py
project/a2a-didauth/a2a_didauth/crypto/: __init__.py  boh.py  verify.py
project/a2a-didauth/a2a_didauth/dids/: __init__.py  demo_resolver.py  resolver.py  utils.py
project/alice/: __main__.py
project/alice/helpers/: __init__.py  didcomm_msg.py
project/alice/mcp/: waltid_server.py
project/bob/: __main__.py  agent_executor.py  didauth_sessions.json  executor_wrapper.py  vc_sessions.sqlite3
project/bob/executors/: a2a_didauth_executor.py  didcomm_executor.py  router_agent_executor.py
project/bob/helpers/: a2a_context_utils.py  agent_card.py  auth_utils.py  ms_entra_id.py
project/bob/mcp/: hub.py
project/bob/routes/: __init__.py  router.py
project/bob/routes/utils/: __init__.py  fetch_callback.py  misc.py  schemas.py  session_db.py
project/common/: __init__.py  config.py  config.yaml  logger.py  rehydrate.py
project/common/a2a_helpers/: __init__.py  request_builder.py  response_builder.py
project/common/didcomm_interfaces/: __init__.py  did_resolver.py
project/common/dids-resolver/: pyproject.toml
project/common/dids-resolver/dids_resolver/: __init__.py  did_jwk_resolver.py  resolver.py
project/common/waltid_core/: __init__.py  session.py
(+43 files in other folders)
