[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-didauth"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.22",
    "httpx>=0.28.1",
    "pydantic>=2.0.0",
    "dids-resolver",
    "jwcrypto>=1.5.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["a2a_didauth*"]
